@@ -1485,35 +1485,11 @@ slim_hidden_def(cairo_close_path);
 void
 cairo_paint (cairo_t *cr)
 {
-    cairo_rectangle_t rectangle;
-
     CAIRO_CHECK_SANITY (cr);
     if (cr->status)
 	return;
 
-    cr->status = _cairo_gstate_get_clip_extents (cr->gstate, &rectangle);
-    if (cr->status)
-	return;
-
-    /* Use an indentity matrix, but only while creating the path,
-     * since _cairo_gstate_get_clip_extents returns a rectangle in
-     * device space. Using an identity matrix simply saves a pair of
-     * conversions from device to user space then back again.
-     *
-     * The identity matrix is not used for the fill so that the source
-     * will be properly transformed.
-     */
-
-    cairo_save (cr);
-    cairo_identity_matrix (cr);
-
-    cairo_rectangle (cr,
-		     rectangle.x, rectangle.y,
-		     rectangle.width, rectangle.height);
-
-    cairo_restore (cr);
-
-    cairo_fill (cr);
+    cr->status = _cairo_gstate_paint (cr->gstate);
 
     CAIRO_CHECK_SANITY (cr);
 }
